# mx-sdk-rs-0.24.0-versions-changed

./: CHANGELOG.md  Cargo.toml  README.md
contracts/benchmarks/mappers/benchmark-common/: Cargo.toml
contracts/benchmarks/mappers/linked-list-repeat/: Cargo.toml
contracts/benchmarks/mappers/map-repeat/: Cargo.toml
contracts/benchmarks/mappers/queue-repeat/: Cargo.toml
contracts/benchmarks/send-tx-repeat/: Cargo.toml
contracts/benchmarks/str-repeat/: Cargo.toml
contracts/examples/adder/: Cargo.toml
contracts/examples/bonding-curve-contract/: Cargo.toml
contracts/examples/bonding-curve-contract/meta/: Cargo.toml
contracts/examples/bonding-curve-contract/src/: lib.rs
contracts/examples/bonding-curve-contract/wasm/: Cargo.toml
contracts/examples/crowdfunding-dct/: Cargo.toml
contracts/examples/crowdfunding-erc20/: Cargo.toml
contracts/examples/crypto-bubbles/: Cargo.toml
contracts/examples/erc1155/: Cargo.toml
contracts/examples/erc1155-marketplace/: Cargo.toml
contracts/examples/erc1155-user-mock/: Cargo.toml
contracts/examples/erc20/: Cargo.toml
contracts/examples/erc721/: Cargo.toml
contracts/examples/factorial/: Cargo.toml
contracts/examples/lottery-dct/: Cargo.toml
contracts/examples/lottery-erc20/: Cargo.toml
contracts/examples/moax-dct-swap/: Cargo.toml
contracts/examples/multisig/: Cargo.toml
contracts/examples/nft-minter/: Cargo.toml
contracts/examples/nft-storage-prepay/: Cargo.toml
contracts/examples/ping-pong-moax/: Cargo.toml
contracts/feature-tests/abi-tester/: Cargo.toml  abi_tester_expected.abi.json
contracts/feature-tests/basic-features/: Cargo.toml
contracts/feature-tests/composability/: Cargo.toml
contracts/feature-tests/panic-message-features/: Cargo.toml
contracts/feature-tests/payable-features/: Cargo.toml
contracts/feature-tests/rust-testing-framework-tester/: Cargo.toml
contracts/feature-tests/use-module/: Cargo.toml  use_module_expected.abi.json
contracts/feature-tests/use-module/meta/: Cargo.toml
contracts/feature-tests/use-module/src/: use_module.rs
contracts/feature-tests/use-module/wasm/: Cargo.toml
contracts/feature-tests/use-module/wasm/src/: lib.rs
contracts/modules/dharitri-wasm-module-bonding-curve/: Cargo.toml
contracts/modules/dharitri-wasm-module-bonding-curve/src/: function_selector.rs  lib.rs
contracts/modules/dharitri-wasm-module-bonding-curve/src/curves/: curve_function.rs  linear_function.rs
contracts/modules/dharitri-wasm-module-bonding-curve/src/utils/: owner_endpoints.rs  structs.rs  user_endpoints.rs
contracts/modules/dharitri-wasm-module-dct/: Cargo.toml  README.md
contracts/modules/dharitri-wasm-module-dns/: Cargo.toml  README.md
contracts/modules/dharitri-wasm-module-features/: Cargo.toml  README.md
contracts/modules/dharitri-wasm-module-governance/: Cargo.toml
contracts/modules/dharitri-wasm-module-governance/src/: governance_configurable.rs  lib.rs
contracts/modules/dharitri-wasm-module-pause/: Cargo.toml  README.md
contracts/modules/dharitri-wasm-module-users/: Cargo.toml  README.md
dharitri-wasm/: Cargo.toml
dharitri-wasm-debug/: Cargo.toml
dharitri-wasm-debug/src/testing_framework/: contract_obj_wrapper.rs  helper_macros.rs  raw_converter.rs
dharitri-wasm-derive/: Cargo.toml
dharitri-wasm-node/: Cargo.toml
dharitri-wasm-output/: Cargo.toml
(+147 files in other folders)
