[package]
name = "use-module"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2018"
publish = false

[lib]
path = "src/use_module.rs"

[dependencies.dharitri-wasm-module-dns]
version = "0.3.4"
path = "../../modules/dharitri-wasm-module-dns"

[dependencies.dharitri-wasm-module-dct]
version = "0.3.4"
path = "../../modules/dharitri-wasm-module-dct"

[dependencies.dharitri-wasm-module-features]
version = "0.3.4"
path = "../../modules/dharitri-wasm-module-features"

[dependencies.dharitri-wasm-module-governance]
version = "0.3.4"
path = "../../modules/dharitri-wasm-module-governance"

[dependencies.dharitri-wasm-module-pause]
version = "0.3.4"
path = "../../modules/dharitri-wasm-module-pause"

[dependencies.dharitri-wasm]
version = "0.3.4"
path = "../../../dharitri-wasm"

[dev-dependencies.dharitri-wasm-debug]
version = "0.3.4"
path = "../../../dharitri-wasm-debug"
